2005-08-14    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/BySellerID.pm: NEW BACKEND
	* t/bysellerid.t: new tests for the above

	* lib/WWW/Search/Ebay.pm (parse_tree): do not return results from auto-spell-checked query term
	* t/basic.t: added tests for the above

2005-08-07    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): return URLs as simple old cgi arguments

2005-07-30    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/UK.pm (_result_count_td_specs_OLD): use parent class' value for this method

	* lib/WWW/Search/Ebay.pm (preprocess_results_page): fix title pattern

2005-07-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): two fixes for new eBay page format

2005-06-11  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm (preprocess_results_page): new method
	(_title_td_specs): new specs
	(_result_count_td_specs): new specs

	* lib/WWW/Search/Ebay/Stores.pm (preprocess_results_page): new method

2005-06-10  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): added a hack to detect when a Stores search runs off the bottom of the list

2005-05-18  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (_result_count_td_specs): new method
	(_title_td_specs): new method
	(parse_tree): fixed parser for new webpage contents

	* lib/WWW/Search/Ebay/UK.pm (_result_count_td_specs): new method
	(_title_td_specs): new method

2005-02-28  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm (currency_pattern): clean up pattern

2005-01-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): call _create_description as a method

2005-01-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (_format_date): now a method, not just a function
	(_create_description): now a method, not just a function
	(_cleanup_url): new method

2004-11-29  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm: new file

	* t/uk.t: new file
